# SQR-Pasynkov-team

./: .gitignore  README.md
.github/workflows/: main.yaml
backend/: .coverage  .coveragerc  .env  .gitignore  Dockerfile  Makefile  README.md  dependencies.py  deploy.sh  main.py  models.py  pyproject.toml  requirements.txt
backend/api/: api.swagger.yaml
backend/app/: config.py  dependencies.py  main.py  models.py  schemas.py
backend/app/database/: crud.py  models.py  users.py
backend/app/internals/activities/: activity.py
backend/app/internals/auth/: token.py  user.py
backend/app/routers/: activities.py  auth.py
backend/internals/auth/: token.py
backend/routers/: auth.py
backend/tests/: activities.py
backend/tests/integration/: test_integration.py
backend/tests/unit/: test_crud.py  test_token.py  test_user.py
frontend/: Dockerfile  README.md  deploy.sh  main.py  pyproject.toml
frontend/src/: main.py
frontend/tests/selenium/: test_selenium.py
frontend/tests/selenium_tests/: test_selenium.py
frontend/tests/unit/: test_frontend.py
monitoring/: docker-compose.yml
monitoring/prometheus/: prometheus.yml
stress/: locustfile.py
