[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["FK12344321 <fk0606@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
pandas = "^2.2.2"
pytest = "^8.1.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
